maria/mariadb-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-lb
spec:
  type: LoadBalancer
  ports:
  - port: 3307 # if target port is not set it will use the same value as port
    targetPort: 3306
  selector:
    app: mariadb
